--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/game.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="pad"></div>
+  </body>
 </html>
