--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script defer src="js/game.js"></script>
   </head>
   <body>
+    <p></p>
+    <button class="pad-button">Create</button>
     <div class="pad"></div>
   </body>
 </html>
