Organize HTML structure and class names
HTML was disorganized. Now it's more suited for future CSS purposes.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch-a-sketch</title>
+    <title>Etch a sketch</title>
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/game.js"></script>
   </head>
   <body>
-    <p></p>
-    <button class="pad-button">Create</button>
-    <div class="pad"></div>
+    <div class="wrapper">
+      <div class="interface">
+        <h1 class="title">Etch a sketch</h1>
+        <div class="pad"></div>
+        <div class="control-panel">
+          <button class="button create-button">Change Grid</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
