--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="pad"></div>
         <div class="control-panel">
           <button class="button create-button">Change Grid</button>
+          <label
+            ><input type="checkbox" class="color-checkbox" />Random
+            Colors</label
+          >
         </div>
       </div>
     </div>
