Overhaul functions for the sake of readability
JS code was remade. Functions were reworked, helpers were created. Much
more readable.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="title">Etch a sketch</h1>
         <div class="pad"></div>
         <div class="control-panel">
-          <button class="button create-button">Change Grid</button>
+          <button class="create-button button">Change Grid</button>
           <button class="clear-button button">Clear Grid</button>
           <label
             ><input type="checkbox" class="color-checkbox" />Random
