Add instructions about the game
Simple instructions below the title to avoid confusion.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="wrapper">
       <div class="interface">
         <h1 class="title">Etch a sketch</h1>
+        <p class="description">
+          To start drawing, hold the left click and drag the cursor over the
+          sketch pad.
+        </p>
         <div class="pad"></div>
         <div class="control-panel">
           <button class="create-button button">Change Grid</button>
